<resources>
    <string name="app_name">Pokemons demo</string>

    <string name="pokemons">Pokemons</string>
    <string name="search">Enter name</string>
    <string name="language">Language</string>
    <string name="result">No results</string>
    <string name="loading">Loading...</string>
    <string name="none">-</string>

    <string name="weight">Weight: </string>
    <string name="height">Height: </string>
    <string name="experience">Experience: </string>

    <string name="stats">Stats: </string>
    <string name="abilities">Abilities: </string>
    <string name="types">Types: </string>

    <string name="launcher_boot">Check boot</string>
    <string name="launcher_connection">Check connection</string>
    <string name="launcher_language">Load language</string>
    <string name="launcher_statistics">Load statistics</string>
    <string name="launcher_abilities">Load abilities</string>
    <string name="launcher_types">Load types</string>
    <string name="launcher_finished">Loading finished</string>
    <string name="launcher_error">Loading error</string>
</resources>
